// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayCheckbox should generate a checkbox with custom classes 1`] = `
<div class="custom-control custom-checkbox my-custom-class">
  <label>
    <input class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should generate a checkbox with custom id 1`] = `
<div class="custom-control custom-checkbox" id="myCheckbox">
  <label>
    <input class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should generate a checkbox with hidden label 1`] = `
<div class="custom-control custom-checkbox">
  <label>
    <input class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description sr-only">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should generate a checkbox with name 1`] = `
<div class="custom-control custom-checkbox">
  <label>
    <input class="custom-control-input" name="myCheckbox" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should generate a checkbox with value 1`] = `
<div class="custom-control custom-checkbox">
  <label>
    <input class="custom-control-input" value="mycheckbox" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should generate a checked checkbox 1`] = `
<div class="custom-control custom-checkbox">
  <label>
    <input checked="" class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should generate a disabled checkbox 1`] = `
<div class="custom-control custom-checkbox">
  <label>
    <input disabled="" class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should generate an indeterminate checkbox 1`] = `
<div class="custom-control custom-checkbox">
  <label>
    <input checked="" class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should generate an inline checkbox 1`] = `
<div class="custom-control custom-checkbox custom-control-inline">
  <label>
    <input class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should generate an inline checkbox with classes 1`] = `
<div class="custom-control custom-checkbox custom-control-inline my-custom-class">
  <label>
    <input class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should generate an inline checkbox with custom id 1`] = `
<div class="custom-control custom-checkbox custom-control-inline" id="myCheckbox">
  <label>
    <input class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;

exports[`ClayCheckbox should generate default markup 1`] = `
<div class="custom-control custom-checkbox">
  <label>
    <input class="custom-control-input" ref="input" type="checkbox">
    <span class="custom-control-indicator"></span>
    <span class="custom-control-description">My Checkbox</span>
  </label>
</div>
`;
